--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.11",
     "passport": "^0.4.1",
