--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.8.11",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
